Fixed bugs in partners grid's scrolling and pictures-l not showing in chrome (disable scroll down too early).  A greater than sign should have been the other way due to negative numbers... took so long to figure out, I can't believe I missed this one too.
Also, chrome was having issues showing the big pictures.  I fixed it by making it so their ID wasn't what it used to be.  It always worked fine in FF... I think chrome must have updated to change its behavior.

--- a/public/stylesheets/partners-grid.css
+++ b/public/stylesheets/partners-grid.css
@@ -217,6 +217,7 @@
 #partners-grid{
 	overflow:hidden;
 	padding-bottom:20px;
+	padding-top:6px;
 }
 
 td{
@@ -258,11 +259,6 @@ clear:both;
 
 #spacer{
 	height:10px;
-}
-
-
-#scroll-down{
-	content: "hi";
 }
 
 
